# SocialNetworkAnalysis

./: .gitmodules  .travis.yml  LICENSE.md  README.md
Codes-Yche/: .gitignore  .travis.yml  CMakeLists.txt  ReadMe.md  cis_algorithm.cpp  cis_algorithm.h  configuration.h  damon_algorithm.cpp  damon_algorithm.h  demon_algorithm.cpp  demon_algorithm.h  execute_exp.sh  execute_exp_draw.sh  gce_algorithm.h  include_header.h  input_output_handler.h  main.cpp  parallelizer.h  reducer.h  run_cis_demon.sh  test_cis.cpp  test_daemon.cpp  test_demon.cpp
Codes-Yche/ProcessorInfo/: ReadMe.md
Codes-Yche/demo_output_files/: .gitignore  sample_result.txt
Codes-Yche/deprecated_files/: ReadMe.md
Codes-Yche/deprecated_files/processor_info/: Cluster-16  Cluster-23  LabDesktop.txt  ReadMe.md
Codes-Yche/processor_info/: Cluster-15
Codes-Yche/src/: CMakeLists.txt  cis_algorithm.cpp  cis_algorithm.h  configuration.h  dataflow_scheduler.h  demon_algorithm.cpp  demon_algorithm.h  find_grained_merge_scheduler.h  fine_grained_merge_scheduler.h  gce_algorithm.cpp  gce_algorithm.h  input_output_handler.h  parallelizer.h  reduce_scheduler.h  reducer.h  test_cis.cpp  test_demon.cpp  test_gce.cpp  thread_pool_base.h  thread_pool_breakable.h
Codes-Yche/src/algorithm/: ReadMe.md  cis_algorithm.cpp  cis_algorithm.h  demon_algorithm.cpp  demon_algorithm.h
Codes-Yche/src/demo/: CMakeLists.txt  ReadMe.md  demo_cis.cpp  demo_graph.csv  demo_result.txt
Codes-Yche/src/evaluation_metrics/: .gitignore  CMakeLists.txt  include_header.h  input_output_handler.h  modularity.cpp  modularity.h
Codes-Yche/src/parallel_utils/: ReadMe.md  ThreadPoolIntro.md  dataflow_scheduler.h  fine_grained_merge_scheduler.h  parallel_configuration.h  reduce_scheduler.h  thread_pool_base.h  thread_pool_breakable.h
Codes-Yche/src/test/: CMakeLists.txt  thread_pool_breakable_test.cpp  thread_pool_test.cpp
Codes-Yche/util/: execute_exp_draw.sh  get_statistics.py  run_cis_demon.sh
Codes-Yche/util_scripts/: execute_exp.sh  get_statistics.py
Dataset/TopicOrSemanticAnalylis/DBLP-Scholar/: DBLP1.csv
OCDEvaluationYche/: .gitignore  CMakeLists.txt  include_header.h  input_output_handler.h  main.cpp  modularity.cpp  modularity.h
Overlapping-Community-Detection/2009-Connected-Iterative-Scan/: README~  main.cc  makefile~
Overlapping-Community-Detection/2009-Connected-Iterative-Scan/Libraries/Files/: makefile
Overlapping-Community-Detection/2009-Connected-Iterative-Scan/Libraries/Network/: Network.cc~  RandomNetwork.h~  TemporalNetwork.cc~  TemporalNetwork.h~  makefile  makefile~
Overlapping-Community-Detection/2009-Connected-Iterative-Scan/Libraries/Params/: Parameters.cc  Parameters.h~  makefile  makefile~
Overlapping-Community-Detection/2010-iLCD/: .gitignore
Overlapping-Community-Detection/2010-iLCD/iLCD-source/: .classpath  .project
Overlapping-Community-Detection/2012-DEMON/: Demon.py
Overlapping-Community-Detection/2014-Heat-Kernel/: ._hkgrow_mex.cpp
Survey/: Community-Detection-Related-Reading-List.md  Community-Detection-Survey.md  Community-Search-Survey.md  New Findings.md  Overlapping-Community-Detection-Codes.md
